@@ -143,6 +143,7 @@ OrchestrasPage.title = Orchestras
 PrefsDlg = Preferences
 PrefsDlg.tabConnection = Connection
 PrefsDlg.tabConsole = LS Console
+PrefsDlg.tabDefaults = Defaults
 PrefsDlg.tabGeneral = General
 PrefsDlg.tabView = View
 
