@@ -66,6 +66,13 @@ JSChannelOutputRoutingDlg.title = Channel Routing
 JSChannelOutputRoutingDlg.ttAudioOut = The audio output channel of sampler channel #{0}
 JSChannelOutputRoutingDlg.ttAudioIn = The audio channel to which the sampler output channel is routed to
 
+JSChannelsDefaultSettingsPane.lAudioOutput = Assign audio output:
+JSChannelsDefaultSettingsPane.lDefaultEngine = Load Engine:
+JSChannelsDefaultSettingsPane.lMidiInput = Assign MIDI input:
+JSChannelsDefaultSettingsPane.strFirstDevice = First Device
+JSChannelsDefaultSettingsPane.strFirstDeviceNextChannel = First Device, Next Channel
+JSChannelsDefaultSettingsPane.title = Sampler channel's default actions
+
 JSConnectionPropsPane.address = Address:
 JSConnectionPropsPane.port = Port:
 JSConnectionPropsPane.title = LinuxSampler
@@ -114,6 +121,9 @@ JSDbSearchPane.modifiedCriteria = When was it modified?
 JSDbSearchPane.moreCriterias = More criterias
 JSDbSearchPane.sizeCriteria = What size is it?
 JSDbSearchPane.typeCriteria = What to look for?
+
+JSDefaultsPropsPane.checkChannelDefaults = Use default actions when chanel is created
+JSDefaultsPropsPane.titleChannels = Sampler channels
 
 JSEditMidiInstrumentDlg.lEngine = Engine:
 JSEditMidiInstrumentDlg.lFilename = Filename:
